@@ -2,3 +2,4 @@
 .*.swp
 plunger/*.dae
 plunder/*.md3
+.git/
