@@ -1,3 +1,6 @@
+2007-02-12  Kai Blin  <kai.blin@gmail.com>
+	* plugins/sear.py: Export more stuff.
+
 2007-02-01  Kai Blin  <kai.blin@gmail.com>
 	* plugins/info.py, dom.py: output information about faces.
 	* plugins/sear.py: fix a typo
